--- a/lab2/tsconfig.json
+++ b/lab2/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-        "target": "ESNext",
+        "target": "es6",
         "watch": true,
-        "lib": ["dom", "es2015"],
+        "lib": ["esnext", "dom"],
     } 
 }
