--- a/notekeep/package.json
+++ b/notekeep/package.json
@@ -25,5 +25,8 @@
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
+  },
+  "dependencies": {
+    "firebase": "^8.6.5"
   }
 }
