--- a/notekeep/package.json
+++ b/notekeep/package.json
@@ -27,6 +27,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "firebase": "^8.6.5"
+    "firebase": "^8.6.5",
+    "jest": "^27.0.4"
   }
 }
