--- a/notekeep/tsconfig.json
+++ b/notekeep/tsconfig.json
@@ -6,6 +6,7 @@
         "module": "commonjs",
         "target": "es6",
         "removeComments": true,
+        "suppressImplicitAnyIndexErrors": true,
     },
     "include": [
         "src/**/*"
